Fixes #77. Added proper styling, so the dropdown button in mobile is visible.

--- a/karchan/src/main/webapp/css/karchan.css
+++ b/karchan/src/main/webapp/css/karchan.css
@@ -62,3 +62,16 @@ h4 {
   background: blue;
   font-weight: bold;
 }
+
+.navbar-toggler {
+  background-image: url('/images/gif/dragon.gif');
+  background-color: grey;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.navbar-brand {
+  font-family: 'GabrielleRegular';
+  color: white !important; 
+}
